assets/css/style.css
/* ... */
ul { margin-left: 0 }

table {
		width: 100%;
		overflow-x: auto;
		display: block;
		white-space: nowrap;
}

nav.page-nav h2 { display: none }
nav.top-bar ul, nav.page-nav ul { list-style-type: none; padding-left: 0 }
nav.page-nav li { display: inline-block; margin: 0; padding-right: 10px; }
nav.page-nav li:not(:first-child) { border-left: none }
nav.page-nav .current { font-weight: bold }
td.num-posts { text-align: right; position: relative }
td.num-posts .data-background-bar {
    background-color: lightgray;
    overflow: visible;
    z-index: -1;
    display: inline-block;
    position: absolute;
    text-align: right;
    right: 0
}

img, video, svg { max-width: 100%; height: auto; width: auto; max-height: 80vh; margin: auto; display: block }
embed, iframe { margin: auto; display: block }
.pswp img, .pswp video { max-height: none }
.body { max-width: 62rem }

article.post { border-bottom: 1px solid #ccc }

.sketch-thumbnails { display: flex; flex-wrap: wrap; align-items: flex-start; justify-content: space-between; width: 100%  }
.sketch-thumbnails .sketch-thumbnail { width: auto; max-width: auto }
.sketch-thumbnail { display: inline-block; max-width: 33%; margin-bottom: 30px }
.sketch-full { max-width: 100%; margin-bottom: 30px; text-align: center }
details summary h1, details summary h2, details summary h3, details summary h4, details summary h5, details summary h6 { display: inline-block }
.pswp__img { background-color: white }

.screen-reader-text {
     border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  word-wrap: normal !important;
}

.datatable td, .datatable th { border: 1px solid #ccc }

/* Start of copy code */
pre.src { margin: 0 }
.org-src-container {
		position: relative;
		margin: 0 0;
		padding: 1.75rem 0 1.75rem 1rem;
}
div > details { padding: 20px; border: 1px solid lightgray }
.org-src-container > details  { padding: 0; border: none }
details > .org-src-container { padding: 0; border: none }
summary { position: relative; }
summary .org-src-container { padding: 0 }
summary .org-src-container pre.src { margin: 0 }
.org-src-container button.copy-code, summary button.copy-code {
		position: absolute;
		top: 0px;
		right: 0px;
}
/* End of copy code */

.tldr { padding: 10px; border: 1px solid lightgray }
.yt-video { text-align: center }
figure { text-align: center; margin: 0 }

.hidden { display: none }
.org-center { text-align: center }
.js .audio-time[role=button], .js .media-time[role=button] { cursor: pointer; }
.audio video { width: 100%; height: 150px }
.audio video::cue { font-size: 1rem }

.padding20 { padding: 20px }

@media screen and (min-width: 64.063em) { /* min-width 1025px, large screens */
		.gallery { display: grid;
							 grid-template-columns: 1fr 1fr; }
		.gallery img { max-height: 300px }
}

div.topic-link { margin-bottom: 1em; }
img.box-shadow, .box-shadow img { box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3); border: 1px solid #ccc }


@media only screen and (min-width: 95rem) {
		html, body { overflow-x: unset; }
		.sticky-toc, .sticky-left, .sticky-right {
				width: calc((100vw - 65rem - 5rem)/2);
				position: sticky;
				max-height: calc(100vh - 2rem);
				overflow-y: auto;
				scroll-behavior: smooth;
				background: white;
				top: 0;
				padding: 5px;
		}

		article .sticky-toc {
				margin-right: calc((-100vw + 65rem)/2);
				float: right;
				margin-left: 0;
		}
		.sticky-toc, .sticky-left {
				margin-left: calc((-100vw + 65rem)/2);
				float: left;
		}
		.sticky-right {
				margin-right: calc((-100vw + 65rem)/2);
				float: right;
		}
		.sticky-toc .panzoom figure { margin: 0 }
		.link-to-nonsticky-toc {
				display: none
		}
		@media (prefers-color-scheme: dark) {
				.sticky-toc, .sticky-left, .sticky-right {
						background: black;
				}
		}
		.left-doodle { width:200px; }
		.right-doodle { width:200px; }
		abbr[title]:hover::after,
		abbr[title]:focus::after {
				content: ""
		}
}


.inline-list { padding: 0px }
.inline-list li { display: inline-block; margin-right: 1em; }

.left-doodle { float:left;width:100px; margin-right: 10px }
.right-doodle { float:right;width:100px; margin-left: 10px }
.center-doodle { text-align:center; margin-top: 16px }
/* @media screen and (min-width: 64.063em) { /\* min-width 1025px, large screens *\/ */
/* 		.left-doodle { margin-left:-150px } */
/* 		.right-doodle { margin-right: -150px; } */
/* } */

// https://adrianroselli.com/2017/12/tweaking-text-level-styles.html
@media screen and (-ms-high-contrast: active) {
  mark {
    color: HighlightText;
    background-color: Highlight;
  }
}
@media print {
  mark {
    border: 1pt dotted #000;
  }
}
mark { background-color: var(--modus-bg-yellow-subtle) }
mark.green { background-color: var(--modus-bg-green-subtle) }
mark.red { background-color: var(--modus-bg-red-subtle) }

.panzoom svg.active { border: 2px solid black }
.panzoom figure { margin-left: 0; margin-right: 0 }
.panzoom svg { max-height: unset }

.active { background-color: var(--modus-bg-tab-bar) }

.entry h2, .entry h3, .entry h4, .entry p, .content h2, .content h3, .content h4, .content p { position: relative }
div#main a.anchor-icon:link, article a.anchor-icon:link, .content a.anchor-icon:link, .entry a.anchor-icon:link { font-size: 60%; text-decoration: none !important; font-size: small; margin-right: 1em }

img#site-logo {
  width: 640px;
  height: 116px;
}


/* https://www.perlmonks.org/?node_id=11161817 */
 abbr[title] {
        position: relative;

        /* ensure consistent styling across browsers */
        text-decoration: underline dotted;
    }
/* ... */

